syntax = "proto3";

package ampb;

import "shpb/anime_link.proto";
import "ampb/anime_movie.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/ampb";

message CreateAnimeMovieLinkRequest {
    int64 animeID = 1;
    shpb.AnimeLinkRequest animeLinks = 2;
}

message CreateAnimeMovieLinkResponse {
    AnimeMovieResponse animeMovie = 1;
    shpb.AnimeLinkResponse animeLinks = 2;
}